EVALSYS-951 - Allow free-text questions to be made compulsory

--- a/sakai-evaluation-tool/src/webapp/content/templates/administrate.html
+++ b/sakai-evaluation-tool/src/webapp/content/templates/administrate.html
@@ -173,6 +173,12 @@
                 <span rsf:id="students-cancel-allowed-note">Students may cancel while filling out their survey</span>
             </label>
         </p>
+        <p class=   "longtext indnt1">
+	    <label for="students-answer-text-required-items" class="block">
+                    <span rsf:id="students-answer-text-required-items-note">Students must answer text items that are required</span>
+	            <select rsf:id="students-answer-text-required-items" id="students-answer-text-required-items-id"></select>
+            </label>
+        </p> 
     </fieldset>
 
     <fieldset  class="visibleFS"><legend><span rsf:id="administrator-settings-header">Administrator Settings:</span></legend>
