--- a/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
+++ b/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
@@ -1705,6 +1705,9 @@ table.tablesorter th.header.headerSortDown {
   display: inline-block;
   left: 0;
 }
+.evaluation .item .validFail .title .required {
+  display: inline-block;
+}
 .evaluation .item .numberWrapper {
   text-align: right;
   display: -moz-inline-box;
