--- a/sakai-evaluation-tool/src/webapp/content/templates/evaluation_settings.html
+++ b/sakai-evaluation-tool/src/webapp/content/templates/evaluation_settings.html
@@ -221,7 +221,12 @@
 					<input rsf:id="blankResponsesAllowed" type="checkbox" name="blankResponsesAllowed" id="blankResponsesAllowed" />
 					<label rsf:id="blankResponsesAllowed_label" for="blankResponsesAllowed">Blank non-text question responses allowed:</label>
 					<p rsf:id="msg=evalsettings.blank.responses.allowed.note" class="instructionText textPanelFooter indnt2">Participants are not warned when responses are left blank if unchecked</p>
-				</div>	
+				</div>
+                                <div rsf:id="compulsoryTextItemsAllowed_branch:" class="checkbox">
+                                        <input rsf:id="compulsoryTextItemsAllowed" type="checkbox" name="compulsoryTextItemsAllowed" id="compulsoryTextItemsAllowed" />
+                                        <label rsf:id="compulsoryTextItemsAllowed_label" for="compulsoryTextItemsAllowed">If compulsory text question exist, they must be answered:</label>
+                                        <p rsf:id="msg=evalsettings.text.items.compulsory.note"  class="instruction textPanelFooter indnt2">Students must answer all compulsory free text/essay questions</p>
+                                </div>
 				<div rsf:id="showModifyResponsesAllowedToStu:" class="checkbox">
 					<input rsf:id="modifyResponsesAllowed" type="checkbox" name="modifyResponsesAllowed" id="modifyResponsesAllowed" />
 					<label rsf:id="modifyResponsesAllowed_label" for="modifyResponsesAllowed">Modification of responses allowed:</label>
