--- a/sakai-evaluation-tool/src/webapp/content/templates/administrate_search.html
+++ b/sakai-evaluation-tool/src/webapp/content/templates/administrate_search.html
@@ -29,6 +29,16 @@
     <script src="../js/jquery/jquery-1.4.4.min.js" type="text/javascript"></script>
     <script src="../js/jquery/jquery-ui-1.8.all.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="/library/js/spinner.js"></script>
+    <script language="javascript">
+               $(document).ready(function(){
+                       $("input[id=search-text]").click(function(){
+                                       $("input[name=searchGroups]").val(false);
+                               });
+                       $("input[id=search-text-group]").click(function(){
+                                       $("input[name=searchGroups]").val(true);
+                               });
+            });
+    </script>
 
     <link href="../css/jquery/jquery-ui-1.8.all.css" type="text/css" rel="stylesheet" media="all" />
     <link href="../css/evaluation_base.css" type="text/css" rel="stylesheet" media="all" />
@@ -57,13 +67,17 @@
             </div>
             <div rsf:id="msg=administrate.search.instruction" class="instructionText">
             </div>
+            <div rsf:id="results-max" class="messageInformation">
+            </div>
             <div class="navPanel"> 
                 <div class="viewNav">
                     <form rsf:id="search-form">
                         <!--note: default is blank for first search, previous search strings for subsequent searches-->
-						<input rsf:id="search-input" size="45" type="text" />
+						<input rsf:id="search-input" size="30" type="text" />
 						<!-- string for input in bundle as administrate.search.submit.title-->
-						<input rsf:id="search-text" type="submit" value="Search" onclick="SPNR.disableControlsAndSpin( this, null );" />
+						<input rsf:id="search-text" id="" type="submit" value="Search by eval title" onclick="SPNR.disableControlsAndSpin( this, null );" />
+						<input rsf:id="search-input-group" size="30" type="text" />
+						<input rsf:id="search-text-group" id="" type="submit" value="Search by group title" />
                     </form>
                 </div>
                 <div class="listNav listPager">
