VULA-479: Ajust CSS so that Synchronize Group Memberships is not hidden

--- a/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
+++ b/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
@@ -216,6 +216,12 @@ div.scaleDesc {
   clear: both;
 }
 
+ul.breadCrumb:after {
+  display: block;
+  content: '';
+  clear: both;
+}
+
 .navIntraTool .breadCrumb {
   margin: 0;
   float: left;
