EVALSYS-1532 - Make sections settings available only if hierarchy is also available
(cherry picked from commit f351dd9789033c404659ef6b026ec2a1537d8d8a)

--- a/sakai-evaluation-tool/src/webapp/content/templates/evaluation_settings.html
+++ b/sakai-evaluation-tool/src/webapp/content/templates/evaluation_settings.html
@@ -134,7 +134,7 @@
 			</fieldset>
 
 			<!-- Section awareness setting -->
-			<fieldset class="visibleFS">
+			<fieldset rsf:id="fieldSetSectionAwareness:" class="visibleFS">
 				<legend rsf:id="msg=evalsettings.section.awareness.header">Evaluation Section Awareness:</legend>
 				<div rsf:id="sectionAwareness:" class="checkbox">
 					<input rsf:id="sectionAwareness" type="checkbox" name="sectionAwareness" id="sectionAwareness" />
